# Assistente-Virtual

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yml  lint.yml
API/: models.py  serializers.py  urls.py  views.py
API/migrations/: 0001_initial.py  0002_remove_credenciais_numero.py  0003_alter_credenciais_usuario.py
Dashboard/: admin.py  forms.py  models.py  urls.py  views.py
Dashboard/migrations/: 0001_initial.py  0002_supportmensagens_ativo_supportreplymensagens.py
Dashboard/templates/dashboard/: dashboard.html  index.html
Dashboard/templates/dashboard/backlogs/: backlogs.html  backlogs_detail.html  backlogs_form.html  backlogs_list.html  confirm_delete.html
Dashboard/templates/dashboard/suporte/: confirm_delete.html  support_form.html  support_list.html  support_reply.html
Dashboard/templates/dashboard/usuarios/: confirm_delete.html  usuarios.html  usuarios_detail.html  usuarios_list.html
SUAP/: backend.py  backends.py
SUAP/pipeline/: save_user.py
accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts/management/commands/: load_grupos.py
accounts/migrations/: 0001_initial.py  0002_alter_usuarios_email_alter_usuarios_nome_and_more.py  0003_alter_usuarios_username.py  0004_remove_usuarios_nome_remove_usuarios_sobrenome_and_more.py  0005_alter_usuarios_matricula.py  0006_remove_usuarios_data_cadastro_and_more.py
accounts/templates/registration/: login.html
app/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
app/backends/: suap.py
app/migrations/: 0001_initial.py  0002_alter_backlogs_data_alteracao_supportmensagens_and_more.py  0003_rename_jwt_credenciais_suap_token_and_more.py  0004_alter_usuarios_email_delete_credenciais.py  0005_delete_backlogs_alter_usuarios_options_and_more.py  0006_delete_usuarios.py
app/templates/app/: about.html  backlogs.html  index.html  login.html  support.html
app/templates/app/dashboard/: dashboard.html  usuarios.html
app/templates/app/dashboard/backlogs/: backlogs.html
app/templates/app/dashboard/suporte/: support.html
app/templates/app/dashboard/usuarios/: usuarios.html
app/templates/app/support/: support.html  support_form.html  support_listar.html
app/templates/migrations/: 0001_initial.py  0003_rename_jwt_credenciais_suap_token_and_more.py
backlogs/: apps.py  forms.py  models.py  urls.py  views.py
compose/django/: Dockerfile  entrypoint  entrypoint.sh  start  start.sh
compose/nginx/: default.conf
core/: settings.py  urls.py
dashboard/: urls.py
static/css/: dashboard.css  login.css  menu_bar.css
static/javascript/: settings.sample.js
static/javascript/SUAP/: __init__.py
support/: forms.py  models.py  urls.py  views.py
templates/: base.html  nav.html
templates/includes/: pagination.html
usuarios/: forms.py  models.py  views.py
