[metadata]
name = AVF
version = 0.1.0
description = Projeto Django integrado com o SUAP
author = Rafael
license = MIT

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    app*
    accounts*
    API*
    core*
    Dashboard*
    SUAP*

exclude =
    static*
    templates*
    venv*
